--- a/1v1/index.html
+++ b/1v1/index.html
@@ -3,10 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Google</title></title>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async="" src="gtag/js.js?id=UA-118283086-6"></script>
-	<script src="js/googleAnalytics.js"></script>
+	<title>1v1.LOL</title>
 	<script src="ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="js/IronSourceRV.js"></script>
 	<script src="js/mobileRedirect.js"></script>
@@ -56,41 +53,9 @@
 	}('372_49986_1v1'));
 	Object.defineProperty(window.performance.__proto__,"measures",Object.getOwnPropertyDescriptor(window.performance.__proto__,"now")),delete window.performance.__proto__.now,window.performance.__proto__.now={},Object.defineProperty(window.performance.__proto__,"now",{get:function(){return this.measures}}),Object.defineProperty(window.performance.__proto__,"now",{set:function(){Object.defineProperty(window.performance.__proto__,"now",{get:function(){return function(){return this.measures()/2}}})}});
 	</script>
-	<!-- MIDROLL/INTERSTITIAL VIDEO API -->
-	<script src="js/cpmstar.js"></script>
-		<script>alert(`youre a nigger - from your pookie`);</script>
-
 </head>
 
 <body>
-	<div class="ads">
-		<div class="ad-smallscreen">
-			<div class="ad ad-rectangle-bottom">
-			</div>
-		</div>
-		<div class="ad ad-rectangle-upper" id="adRectangleUpper">
-			<!-- 300X250B PLACEMENT TAG - PLACE INTO BODY (ZONE TAG REQUIRED) -->
-			<script>
-				(function(w,pid){
-				var r=function(c,m){c=c.split('').reduce(function(a,b){return(a<<5)-a+b.charCodeAt(0)>>>m},0);return(10+((c*7)%26)).toString(36)+c.toString(36);},y=r(w.location.href.split('#')[0],1),c=r(w.location.href.split('#')[0]+pid,0);
-				w.document.write('<div style="width:300px;height:250px" class="'+c+'"></div>');
-				})(window,83023);
-			</script>
-		</div>
-		<div class="ad-largescreen">
-			<div class="ad ad-leaderboard-bottom">
-			<!-- 300X600B PLACEMENT TAG - PLACE INTO BODY (ZONE TAG REQUIRED) -->
-			<script>
-				(function(w,pid){
-				var r=function(c,m){c=c.split('').reduce(function(a,b){return(a<<5)-a+b.charCodeAt(0)>>>m},0);return(10+((c*7)%26)).toString(36)+c.toString(36);},y=r(w.location.href.split('#')[0],1),c=r(w.location.href.split('#')[0]+pid,0);
-				w.document.write('<div style="width:300px;height:600px" class="'+c+'"></div>');
-				})(window,85420);
-			</script>
-			</div>
-		</div>
-	</div>
-
-	<!-- <div id="interAdsContainer" style="display: none;"></div> -->
 	<div id="gameContainer"></div>	
 	<div id="loader">
 		<img class="logo" src="logo.png">
